@@ -10,7 +10,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["John Mettraux", "Jeff Leverenz"]
-  s.date = "2014-01-02"
+  s.date = "2014-01-03"
   s.description = "\n    Yet another RememberTheMilk wrapper, successor to rufus-rtm.\n  "
   s.email = "jeff.leverenz@gmail.com"
   s.extra_rdoc_files = [
@@ -42,14 +42,11 @@ Gem::Specification.new do |s|
     s.specification_version = 4
 
     if Gem::Version.new(Gem::VERSION) >= Gem::Version.new('1.2.0') then
-      s.add_runtime_dependency(%q<rufus-verbs>, [">= 1.0.0"])
       s.add_development_dependency(%q<yard>, [">= 0"])
     else
-      s.add_dependency(%q<rufus-verbs>, [">= 1.0.0"])
       s.add_dependency(%q<yard>, [">= 0"])
     end
   else
-    s.add_dependency(%q<rufus-verbs>, [">= 1.0.0"])
     s.add_dependency(%q<yard>, [">= 0"])
   end
 end
